<resources>
    <string name="app_name">softices</string>
    <string name="enter_your_email">Enter Your Email</string>
    <string name="enter_your_password">Enter Your Password</string>
    <string name="create_an_account">Create An Account</string>
    <string name="sign_in">Sign In</string>
    <string name="email_id">Email</string>
    <string name="forget_password">Forget Password</string>
    <string name="first_name">Firstname</string>
    <string name="last_name">Lastname</string>
    <string name="sign_up_email">Email</string>
    <string name="gender">Gender:</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="sign_up_password"> Password</string>
    <string name="sign_up_confirm_password">Confirm Password</string>
    <string name="Already_have_an_account_Log_In">Already have an account? Log In</string>
    <string name="sign_up">Sign Up</string>
</resources>
