<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/txt_signi_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="140dp"
        android:layout_marginTop="60dp"
        android:text="@string/sign_in"
        android:textSize="40dp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/img_mipmap"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:src="@drawable/ic_launcher_background" />

    <EditText
        android:id="@+id/edt_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:hint="@string/enter_your_email" />

    <EditText
        android:id="@+id/edt_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edt_email"
        android:layout_marginTop="20dp"
        android:hint="@string/enter_your_password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btn_signin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edt_password"
        android:layout_marginTop="30dp"
        android:text="sign in" />

    <TextView
        android:id="@+id/txt_create_an_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_signin"
        android:layout_marginLeft="140dp"
        android:layout_marginTop="40dp"
        android:text="@string/create_an_account"
        android:textSize="20dp"
        android:textStyle="bold|italic" />

</RelativeLayout>